--- a/ai_project/src/main/resources/templates/mainpage.html
+++ b/ai_project/src/main/resources/templates/mainpage.html
@@ -54,7 +54,7 @@
                     내과 전문의 상담 및 진단을 통해 질병을 조기 발견하고 치료할 수 있습니다.
                     AI 기반 진단 서비스도 지원합니다.
                 </p>
-                <a href="#" class="btn-card">내과 서비스 시작하기</a>
+                <a href="/hospital_med" class="btn-card">내과 서비스 시작하기</a>
             </div>
 
             <!-- 외과 -->
@@ -65,7 +65,7 @@
                     외상, 수술이 필요한 질환 등 외과 전문 진료 서비스를 제공합니다.
                     전문의 상담을 통해 안전하고 신속한 치료를 받아보세요.
                 </p>
-                <a href="surgery" class="btn-card">외과 서비스 시작하기</a>
+                <a href="/hospital_sur" class="btn-card">외과 서비스 시작하기</a>
             </div>
         </div>
     </section>
